# rde-creator

./: .eslintignore  .eslintrc.json  .gitignore  .pylintrc  .vscodeignore  404.html  AI_GENERATION.md  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.md  cpp-package.html  index.html  llms.md  mkdocs.yml  nodejs-package.html  package-lock.json  package.json  pyrightconfig.json  python-package.html  resource-package.html  search.html  troubleshooting.html  tsconfig.json  tsconfig.vscode.json  webpack.config.js
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: ExtensionBug.md  GenerationBug.md
.github/workflows/: docs.yaml  release.yml  workflow.yml
docs/: CONTRIBUTING.md  cpp-node.md  cpp-package.md  index.md  nodejs-node.md  nodejs-package.md  python-node.md  python-package.md  resource-package.md  troubleshooting.md
search/: search_index.json
src/: AIPackageGenerator.ts  CreateNodePanel.ts  ProcessCreateNode.ts  extension.ts  prompts.ts  utils.ts
src/static/: style.css
src/templates/: CONTRIBUTING.md.hbs
src/templates/cpp_node/: .gitignore  CMakeLists.txt  README.md  manifest.yaml  package.xml
src/templates/cpp_node/cpp_node/src/: node.cpp
src/templates/cpp_node/include/cpp_node/: node.hpp
src/templates/cpp_node/launch/: node.launch.py
src/templates/cpp_node/resource/: package_name
src/templates/cpp_node/src/: node.cpp
src/templates/cpp_node/test/: test_{{package_name}}_node.cpp
src/templates/microros_package/: manifest.yaml
src/templates/python_node/: .gitignore  README.md  manifest.yaml  package.xml  pytest.ini  setup.cfg  setup.py
src/templates/python_node/launch/: node.launch.py
src/templates/python_node/python_node/: __init__.py  node.py
src/templates/python_node/test/: __init__.py  test_node.py
src/templates/rclnodejs_node/: .gitignore  README.md  jest.config.json  manifest.yaml  package.xml
src/templates/rclnodejs_node/launch/: node.launch.py
src/templates/rclnodejs_node/rclnodejs_node/: node.js  package.json
src/templates/rclnodejs_node/test/: node.test.js  setup.js
src/templates/resource/: LICENSE  README.md  manifest.yaml  package.xml  setup.py
src/templates/resource/launch/: robot.launch.py
src/templates/resource/urdf/: robot.urdf
src/test/suite/: extension.test.ts
src/webview/: webview.mts  webview.tsx
