<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>{{package_name}}</name>
  <version>{{package_version}}</version>
  <description>{{package_description}}</description>
  <maintainer email="{{package_maintainer_email}}">{{package_maintainer_name}}</maintainer>
  <license>{{package_license}}</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  {{#if include_lifecycle}}
  <depend>rclcpp_lifecycle</depend>
  {{/if}}
  {{#if include_publisher}}
  <depend>std_msgs</depend>
  {{/if}}
  {{#if include_subscriber}}
  <depend>std_msgs</depend>
  {{/if}}
  {{#if include_service}}
  <depend>std_srvs</depend>
  {{/if}}
  {{#if include_client}}
  <depend>std_srvs</depend>
  {{/if}}

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_cppcheck</test_depend>
  <test_depend>ament_cpplint</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>