<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>{{package_name}}</name>
  <version>0.0.0</version>
  <description>A ROS 2 Node.js node using rclnodejs</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
{{#if include_service}}
  <depend>example_interfaces</depend>
{{/if}}

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>